# chess

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
misc/: header.txt
src/: config.rs  game.rs  macros.rs  main.rs  protocol.rs  score.rs  stockfish.rs
src/engine/: draw.rs  mediocre.rs  mediocrefish.rs  mod.rs  pacifist.rs  passthrough.rs  random.rs  scoville.rs  stockfish.rs  worstfish.rs
src/mode/: mod.rs
